# edgetest-toy

./: README.md  pyproject.toml  setup.cfg
edgetest_toy/: __init__.py
tests/: test_main.py
