[project]
name = "edgetest_toy"
version = "0.1.0"
description = "Bleeding edge dependency testing"
python_requires = ">=3.7.0"
dependencies = ["pandas<=1.2.0"]

[project.optional-dependencies]
test = ["pytest"]

[edgetest]
extras = ["tests"]
command = "pytest tests -m 'not integration'"

[edgetest.envs.myenv]
deps = ["pip-tools"]
conda_install = ["graphviz"]
python_version = "3.9"
upgrade = ["pandas"]

[edgetest.pip_tools]
index_url = "tests"
extras = ["tests"]
