[metadata]
name = edgetest_toy
version = 0.1.0
description = Bleeding edge dependency testing
python_requires =
    >=3.7.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas<=1.2.0

[options.extras_require]
test =
    pytest

[edgetest]
python_version = 3.9
extras =
    tests
deps =
    pip-tools

[edgetest.envs.pandas]
upgrade =
    pandas